--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
 <p>&ldquo;Magic is just science that we don’t understand yet.&rdquo;
 – Arthur C. Clarke</p>
 </blockquote>
-<p>Welcome to a blog with my personal musing on Homelabbing, Privacy, Security, Automation, IaC, and my journey in the ever changing IT landscape. Be prepared for all manner of post from how-to&rsquo;s to deep dives. Many post are sent by carrier pigeon and arrive precisely when they mean to.</p>
+<p>Welcome to a blog with my personal musing on Homelabbing, Privacy, Security, Automation, IaC, and my journey in the ever-changing IT landscape. Be prepared for all manner of posts, from how-to&rsquo;s to deep dives. Many posts are sent by carrier pigeon and arrive precisely when they mean to.</p>
 
 
   </main>
