ran hugo to fix site build

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <meta name="title" content="Home" />
 <meta name="description" content="IT Blog on Homelabbing, Privacy, Security, Automation, IaC, my journey and the ever changing IT landscape." />
 <meta name="author" content="" />
-<meta name="keywords" content="markdown,test,text," />
+<meta name="keywords" content="about me,blog post,community,homelab,journey,markdown,pc building,pfsense," />
 
 
 
@@ -74,11 +74,12 @@
 – Arthur C. Clarke</p>
 </blockquote>
 <p>Welcome to a blog with my personal musing on Homelabbing, Privacy, Security, Automation, IaC, and my journey in the ever-changing IT landscape. Be prepared for all manner of posts, from how-to&rsquo;s to deep dives. Many posts are sent by carrier pigeon and arrive precisely when they mean to.</p>
+<h6 id="powered-by-100-human-thought-and-word-magic-with-a-bit-of-git">Powered by 100% human thought and word magic, with a bit of git.</h6>
 
 
   </main>
   <footer><small>
-  SJW (CC BY 4.0) | Made with <a href="https://github.com/clente/hugo-bearcub">Bear Cub</a>
+  Joe W (CC BY 4.0) | Made with <a href="https://github.com/clente/hugo-bearcub">Bear Cub</a>
 </small></footer>
 
     
