--- a/public/404.html
+++ b/public/404.html
@@ -10,7 +10,7 @@
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="IT Blog on Homelabbing, Privacy, Security, Automation, IaC, my journey and the ever changing IT landscape." />
 <meta name="author" content="" />
-<meta name="keywords" content="markdown,test,text," />
+<meta name="keywords" content="about me,blog post,community,homelab,journey,markdown,pc building,pfsense," />
 
 
 
@@ -72,7 +72,7 @@
 
   </main>
   <footer><small>
-  SJW (CC BY 4.0) | Made with <a href="https://github.com/clente/hugo-bearcub">Bear Cub</a>
+  Joe W (CC BY 4.0) | Made with <a href="https://github.com/clente/hugo-bearcub">Bear Cub</a>
 </small></footer>
 
     
