adding new article

--- a/public/404.html
+++ b/public/404.html
@@ -10,7 +10,7 @@
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="IT Blog on Homelabbing, Privacy, Security, Automation, IaC, my journey and the ever changing IT landscape." />
 <meta name="author" content="" />
-<meta name="keywords" content="about me,blog post,community,homelab,journey,markdown,pc building,pfsense," />
+<meta name="keywords" content="about me,blog post,community,homelab,journey,markdown,pc building,pfsense,state of the lab," />
 
 
 
